--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lxgnb</groupId>
     <artifactId>xxl-job-boot-starter</artifactId>
-    <version>2.3.0-jobinfo-executor</version>
+    <version>2.3.0-jobinfo-executor-1</version>
     <name>xxl-job-admin-sdk</name>
     <description>xxl-job-boot-starter</description>
     <url>https://github.com/aitxiaogang/xxl-job-boot-starter.git</url>
